--- a/gameengine-editor/gameengine-editor.vcxproj.filters
+++ b/gameengine-editor/gameengine-editor.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="src\panes\Pane.h">
       <Filter>Header Files\panes</Filter>
     </ClInclude>
+    <ClInclude Include="src\panes\Lights.h">
+      <Filter>Header Files\panes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\panes\Pane.cpp">
+      <Filter>Source Files\panes</Filter>
+    </ClCompile>
+    <ClCompile Include="src\panes\Lights.cpp">
       <Filter>Source Files\panes</Filter>
     </ClCompile>
   </ItemGroup>
