--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -186,6 +186,8 @@
     <None Include="resources\models\suzanne.ply">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="resources\shaders\postprocess.frag" />
+    <None Include="resources\shaders\postprocess.vert" />
     <None Include="resources\shaders\simple.frag">
       <DeploymentContent>true</DeploymentContent>
     </None>
