--- a/gameengine-editor/gameengine-editor.vcxproj
+++ b/gameengine-editor/gameengine-editor.vcxproj
@@ -169,6 +169,18 @@
     <ClCompile Include="src\panes\Pane.cpp" />
     <ClCompile Include="src\panes\Viewport.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gameengine\gameengine.vcxproj">
+      <Project>{4f4b007f-ee21-46cf-b8de-2447b8b8015a}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\shaders\postprocess.frag" />
+    <None Include="resources\shaders\postprocess.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
