--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="src\GLComponents.h" />
     <ClInclude Include="src\loaders\models\PlyLoader.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
+    <ClInclude Include="src\render\Renderable.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\scene\Camera.h" />
     <ClInclude Include="src\scene\light\PointLight.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="src\GLComponents.cpp" />
     <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
+    <ClCompile Include="src\render\Renderable.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\scene\Camera.cpp" />
     <ClCompile Include="src\scene\light\PointLight.cpp" />
