--- a/gameengine/shaders.rc
+++ b/gameengine/shaders.rc
@@ -2,3 +2,10 @@
 
 RCID_TF_POSTPROCESS_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess.frag"
 RCID_TF_POSTPROCESS_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess.vert"
+
+RCID_TF_MODEL_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model.frag"
+RCID_TF_MODEL_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model.vert"
+
+RCID_TF_MODEL_SHADOW_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model_shadow.frag"
+RCID_TF_MODEL_SHADOW_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model_shadow.vert"
+RCID_TF_MODEL_SHADOW_GEOMSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model_shadow.geom"
