--- a/demo-cube/resource.rc
+++ b/demo-cube/resource.rc
@@ -1,3 +1,5 @@
-#include <wx/msw/wx.rc>
+#include <gameengine/resource.rc>
+#include <gameengine/shaders.rc>
+
 ApplicationIcon ICON "main.ico"
 ICONPRG ICON "main.ico"
