--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -231,6 +231,8 @@
   <ItemGroup>
     <None Include="resources\shaders\model.frag" />
     <None Include="resources\shaders\model.vert" />
+    <None Include="resources\shaders\model_mode0.geom" />
+    <None Include="resources\shaders\model_mode1.geom" />
     <None Include="resources\shaders\model_shadow.frag" />
     <None Include="resources\shaders\model_shadow.geom" />
     <None Include="resources\shaders\model_shadow.vert" />
