--- a/gameengine/shaders.rc
+++ b/gameengine/shaders.rc
@@ -5,6 +5,8 @@ RCID_TF_POSTPROCESS_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/pos
 
 RCID_TF_MODEL_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model.frag"
 RCID_TF_MODEL_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model.vert"
+RCID_TF_MODEL_GEOMSHADER_MODE0 RCT_TEXTFILE "../gameengine/resources/shaders/model_mode0.geom"
+RCID_TF_MODEL_GEOMSHADER_MODE1 RCT_TEXTFILE "../gameengine/resources/shaders/model_mode1.geom"
 
 RCID_TF_MODEL_SHADOW_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model_shadow.frag"
 RCID_TF_MODEL_SHADOW_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/model_shadow.vert"
