--- a/gameengine-editor/gameengine-editor.vcxproj.filters
+++ b/gameengine-editor/gameengine-editor.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="src\panes\Lights.h">
       <Filter>Header Files\panes</Filter>
     </ClInclude>
+    <ClInclude Include="src\panes\Models.h">
+      <Filter>Header Files\panes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files\panes</Filter>
     </ClCompile>
     <ClCompile Include="src\panes\Lights.cpp">
+      <Filter>Source Files\panes</Filter>
+    </ClCompile>
+    <ClCompile Include="src\panes\Models.cpp">
       <Filter>Source Files\panes</Filter>
     </ClCompile>
   </ItemGroup>
