--- a/gameengine-editor/gameengine-editor.vcxproj.filters
+++ b/gameengine-editor/gameengine-editor.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="src\panes\Models.h">
       <Filter>Header Files\panes</Filter>
     </ClInclude>
+    <ClInclude Include="src\FileManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -64,6 +67,9 @@
     </ClCompile>
     <ClCompile Include="src\panes\Models.cpp">
       <Filter>Source Files\panes</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FileManager.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
