--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -180,6 +180,8 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Engine.h" />
+    <ClInclude Include="src\EventEmitter.h" />
+    <ClInclude Include="src\EventManager.h" />
     <ClInclude Include="src\GLComponents.h" />
     <ClInclude Include="src\loaders\models\PlyLoader.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
@@ -203,6 +205,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp" />
+    <ClCompile Include="src\EventEmitter.cpp" />
+    <ClCompile Include="src\EventManager.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
     <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
