--- a/gameengine-editor/gameengine-editor.vcxproj.filters
+++ b/gameengine-editor/gameengine-editor.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="src\panes\Cameras.h">
       <Filter>Header Files\panes</Filter>
     </ClInclude>
+    <ClInclude Include="src\VectorCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -76,6 +79,9 @@
     </ClCompile>
     <ClCompile Include="src\panes\Cameras.cpp">
       <Filter>Source Files\panes</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VectorCtrl.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
