--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -190,14 +190,17 @@
     <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\Resource.h" />
     <ClInclude Include="src\scene\Camera.h" />
+    <ClInclude Include="src\scene\Cubemap.h" />
     <ClInclude Include="src\scene\light\PointLight.h" />
     <ClInclude Include="src\scene\LocallyMovable.h" />
+    <ClInclude Include="src\scene\LocalTexture.h" />
     <ClInclude Include="src\scene\model\Material.h" />
     <ClInclude Include="src\scene\model\Model.h" />
     <ClInclude Include="src\scene\model\Reflection.h" />
     <ClInclude Include="src\scene\Nameable.h" />
     <ClInclude Include="src\scene\OrientedBoundingBox.h" />
     <ClInclude Include="src\scene\Positionable.h" />
+    <ClInclude Include="src\scene\Referenceable.h" />
     <ClInclude Include="src\scene\Rotatable.h" />
     <ClInclude Include="src\scene\Scalable.h" />
     <ClInclude Include="src\scene\Scene.h" />
@@ -216,14 +219,17 @@
     <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\Resource.cpp" />
     <ClCompile Include="src\scene\Camera.cpp" />
+    <ClCompile Include="src\scene\Cubemap.cpp" />
     <ClCompile Include="src\scene\light\PointLight.cpp" />
     <ClCompile Include="src\scene\LocallyMovable.cpp" />
+    <ClCompile Include="src\scene\LocalTexture.cpp" />
     <ClCompile Include="src\scene\model\Material.cpp" />
     <ClCompile Include="src\scene\model\Model.cpp" />
     <ClCompile Include="src\scene\model\Reflection.cpp" />
     <ClCompile Include="src\scene\Nameable.cpp" />
     <ClCompile Include="src\scene\OrientedBoundingBox.cpp" />
     <ClCompile Include="src\scene\Positionable.cpp" />
+    <ClCompile Include="src\scene\Referenceable.cpp" />
     <ClCompile Include="src\scene\Rotatable.cpp" />
     <ClCompile Include="src\scene\Scalable.cpp" />
     <ClCompile Include="src\scene\Scene.cpp" />
